// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot, fireevent on button close gate 1`] = `
<body>
  <div>
    <div
      class="controls panel"
    >
      <button
        class="toggle-btn"
        disabled=""
      >
        Lock Gate
      </button>
      <button
        class="toggle-btn"
      >
        Close Gate
      </button>
    </div>
  </div>
</body>
`;

exports[`Matches snapshot, fireevent on button lock gate 1`] = `
<body>
  <div>
    <div
      class="controls panel"
    >
      <button
        class="toggle-btn"
        disabled=""
      >
        Lock Gate
      </button>
      <button
        class="toggle-btn"
      >
        Close Gate
      </button>
    </div>
  </div>
</body>
`;

exports[`closed toggle is disabled if gate is locked 1`] = `
<body>
  <div>
    <div
      class="controls panel"
    >
      <button
        class="toggle-btn"
        disabled=""
      >
        Unlock Gate
      </button>
      <button
        class="toggle-btn"
        disabled=""
      >
        Close Gate
      </button>
    </div>
  </div>
</body>
`;

exports[`gate cannot be closed or opened when gate is locked 1`] = `
<body>
  <div>
    <div
      class="controls panel"
    >
      <button
        class="toggle-btn"
      >
        Unlock Gate
      </button>
      <button
        class="toggle-btn"
        disabled=""
      >
        Open Gate
      </button>
    </div>
  </div>
</body>
`;
